# Websockets_chat

./: pyproject.toml
app/: Readme.md  main.py
app/api/: router_page.py  router_sockets.py
app/static/: index.js
