[project]
name = "websockets-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Lazarenko",email = "aulazar@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "websockets (>=15.0,<16.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
